# Spotify-Sorter

./: .gitattributes  .gitignore  CONTRIBUTING.md  MANUAL.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-publish.yml  release.yml
spotify-playlist-server/: .env.example  .gitignore  Dockerfile  README.md  debug_db.py  docker-compose.yml  requirements.txt  server_entry.py  spotify-sorter-server.spec  unraid-template.xml
spotify-playlist-server/app/: __init__.py  config.py  database.py  main.py  models.py
spotify-playlist-server/app/routers/: auth.py  configs.py  history.py  playlists.py  (+1 more)
spotify-playlist-server/frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
spotify-playlist-server/tests/: test_retry.py
src/: App.tsx  index.css  store.ts  tauri-api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  debug_log.rs  dynamic.rs  lib.rs  logic.rs  main.rs  scheduler.rs  spotify.rs  tray.rs
src/components/: ActionButtons.tsx  AppSettingsModal.tsx  BackupRestoreModal.tsx  ChangePortModal.tsx  ComparePlaylistsModal.tsx  DesktopSchedulesModal.tsx  DuplicatesSection.tsx  DynamicPlaylistModal.tsx  DynamicPlaylistSection.tsx  ExportModal.tsx  HistoryModal.tsx  IgnoredTracksModal.tsx  M3uExportModal.tsx  PlaylistSection.tsx  ReviewModal.tsx  SetupScreen.tsx  SortSection.tsx  StatusBar.tsx  TitleBar.tsx  UpdateChecker.tsx  VersionSection.tsx
(+22 files in other folders)
