[package]
name = "spotify-sorter"
version = "1.0.0"
description = "A Tauri App"
authors = ["Spotify Sorter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spotify_sorter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
rspotify = { version = "0.13", features = ["client-reqwest"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
open = "5"
dirs = "5"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
walkdir = "2"
cron = "0.12"
match-string = "0.1"
tauri-plugin-shell = "2.3.4"

[profile.release]
# Enable Link-Time Optimization for smaller binary
lto = true
# Strip debug symbols
strip = "symbols"
# Optimize for size (use "3" for max speed instead)
opt-level = "s"
# Single codegen unit for better LTO
codegen-units = 1
# Abort on panic (smaller than unwind)
panic = "abort"
